--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                     <a href="https://www.linkedin.com/in/dev-kumar-485798202" target="_blank">Linkdin</a>
                 </span>
             </span>
-        <a href="index2.html" target="_blank">All Movies</a>
-        <a href="index3.html" target="blank">Web Series</a>
+        <a href="index2.html">All Movies</a>
+        <a href="index3.html" >Web Series</a>
         
-        <a href="index4.html" target="blank">Trending</a>
+        <a href="index4.html">Trending</a>
         <span class="f1">
         <a href="#">🤩</a>
         </span>
