--- a/index4.html
+++ b/index4.html
@@ -44,7 +44,7 @@
         
         <img class="logo-image" src="https://i.ibb.co/zxkHVBZ/B612-20210810-122503-429.jpg">
         <r></r>
-        <h1>      Trending on Dev & company 🤩 ..||⭐⭐⭐⭐⭐||..</h1>
+        <h1 style="color: aqua;">      Trending on Dev & company 🤩 ..||⭐⭐⭐⭐⭐||..</h1>
 <hr>
 <hr>
 <hr>
