--- a/index4.html
+++ b/index4.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trending</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <body background="https://images.ctfassets.net/hrltx12pl8hq/5qYOExRLjOCmMGASiGS4wS/6668ed59345b5707803f0e48e3f4f966/shutterstock_599281424-min__1_.jpg" style="background-repeat: no-repeat;background-size:100%">
@@ -60,5 +60,12 @@
     <hr>
     <hr>
     <hr>
+    <footer class="footer">
+        <p class="footer-text">
+            DEV & company&nbsp;2021-
+            <span class="footer-span"></span>
+        &copy;&nbsp;All&nbsp;rights&nbsp;reserved
+        </p>
+    </footer>
 </body>
 </html>
