--- a/index3.html
+++ b/index3.html
@@ -122,6 +122,13 @@
                     <hr>
                     <hr>
                     <hr>
+           <footer class="footer">
+                                <p class="footer-text">
+                                    Copyright&nbsp;-
+                                    <span class="footer-span"></span>
+                                &copy;&nbsp;DEV&nbsp;& &nbsp;company 2021
+                                </p>
+                            </footer>
 
 </body>
 </html>
